--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,1 +1,24 @@
-<p>por-capital works!</p>
+<h2>Por Capital</h2>
+<div class="row">
+    <div class="col">
+       <app-pais-input
+        (onEnter)="buscar($event)"
+        (onDebounce)="sugerencias($event)"
+        placeholder="Buscar Capital"
+       >
+       </app-pais-input>
+    </div>
+</div>
+
+<hr>
+<div    class="alert alert-danger"
+        *ngIf='hayError'
+>No se encontro nada con el termino {{termino}}
+</div>
+
+<div class="row" *ngIf="paises.length > 0">
+    <div class="col">
+       <!--  Enviamos informacion al HIJO con la informaicon de Paises -->
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
