--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,14 +1,12 @@
-
+<h2>Por País</h2>
 <div class="row">
     <div class="col">
-        <form autocomplete="off" (ngSubmit)='buscar()'>
-            <input  type="text" 
-                    class="form-control"
-                    name="termino"
-                    placeholder="Buscar país..."
-                    [(ngModel)]='termino'
-                    >
-        </form>
+       <app-pais-input
+        (onEnter)="buscar($event)"
+        (onDebounce)="sugerencias($event)"
+        placeholder='Buscar País'
+       >
+       </app-pais-input>
     </div>
 </div>
 
@@ -18,35 +16,9 @@
 >No se encontro nada con el termino {{termino}}
 </div>
 
-<div class="row" *ngIf="!hayError && paises[0]">
+<div class="row" *ngIf="paises.length > 0">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr >
-                    <th>#</th>
-                    <th>
-                        Flag
-                    </th>
-                    <th>Name</th>
-                    <th>Population
-                       
-                    </th>
-                    <th>Capital</th>
-                    <th>Link</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor='let pais of paises; let indice = index'>
-                    <td>{{indice + 1}}</td>
-                    <td><img src="{{pais.flag}}" alt="" class='small-flag'></td>
-                    <td>{{pais.name}}</td>
-                    <td>{{pais.population.toPrecision() | number}}</td>
-                    <td>{{pais.capital}}</td>
-                    <td>
-                        <a href="./pais/123">Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+       <!--  Enviamos informacion al HIJO con la informaicon de Paises -->
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
